<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:background="@color/background_light1"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/row_title_weight"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/gallery_details_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/row_value_weight"
                    android:paddingLeft="20dp"
                    android:orientation="vertical">

                <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                        style="@style/AppBaseTheme.TextView.Title.InvertColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:text="@string/gallery_details_name_title"/>

                <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                        style="@style/AppBaseTheme.EditText"
                        android:id="@+id/gallery_details_item_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gallery_details_item_name_hint"/>

                <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                        style="@style/AppBaseTheme.TextView.Title.InvertColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:layout_marginTop="@dimen/gallery_details_row_margin_top"
                        android:text="@string/gallery_details_cost_title"/>

                <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                        style="@style/AppBaseTheme.EditText"
                        android:id="@+id/gallery_details_cost_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="@string/gallery_details_cost_hint"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gallery_details_row_margin_top"
                android:orientation="horizontal">

            <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                    style="@style/AppBaseTheme.TextView.Title.InvertColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_title_weight"
                    android:text="@string/gallery_details_merchant_name_title"/>

            <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                    style="@style/AppBaseTheme.EditText"
                    android:id="@+id/gallery_details_merchant_name_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_value_weight"
                    android:hint="@string/gallery_details_merchant_name_hint"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gallery_details_row_margin_top"
                android:orientation="horizontal">

            <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                    style="@style/AppBaseTheme.TextView.Title.InvertColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_title_weight"
                    android:text="@string/gallery_details_notes_title"/>

            <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                    style="@style/AppBaseTheme.EditText"
                    android:id="@+id/gallery_details_notes_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_value_weight"
                    android:hint="@string/gallery_details_notes_hint"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gallery_details_row_margin_top"
                android:orientation="horizontal">

            <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                    style="@style/AppBaseTheme.TextView.Title.InvertColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_title_weight"
                    android:text="@string/gallery_details_date_title"/>

            <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                    style="@style/AppBaseTheme.EditText"
                    android:id="@+id/gallery_details_date_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_value_weight"
                    android:editable="false"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    />
        </LinearLayout>

        <com.sevendesign.planitprom.ui.customviews.CustomFontButton
                style="@style/AppBaseTheme.Button.Dark"
                android:id="@+id/gallery_details_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gallery_details_row_margin_top"
                android:text="@string/gallery_details_delete_title"
                android:visibility="gone"
                />

    </LinearLayout>
</ScrollView>