<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_light1">

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/calculator_credit_layout"
        android:overScrollMode="never">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/calculator_padding">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                    style="@style/AppBaseTheme.TextView.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_title_weight"
                    android:text="@string/calculator_tag_price_title"
                    android:textColor="@color/text_medium"
                    />

            <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                    style="@style/AppBaseTheme.EditText"
                    android:id="@+id/calculator_tag_price_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_value_weight"
                    android:inputType="numberDecimal"
                    android:hint="@string/calculator_tag_price_hint"
                    />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/calculator_row_margin_top">

            <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                    style="@style/AppBaseTheme.TextView.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_title_weight"
                    android:text="@string/calculator_sales_tax_title"
                    android:textColor="@color/text_medium"/>

            <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                    style="@style/AppBaseTheme.EditText"
                    android:id="@+id/calculator_sales_tax_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_value_weight"
                    android:inputType="numberDecimal"
                    android:hint="@string/calculator_sales_tax_hint"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/calculator_row_margin_top">

            <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                    style="@style/AppBaseTheme.TextView.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_title_weight"
                    android:layout_gravity="fill"
                    android:lines="2"
                    android:singleLine="false"
                    android:text="@string/calculator_discount_title"
                    android:textColor="@color/text_medium"/>

            <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                    style="@style/AppBaseTheme.EditText"
                    android:id="@+id/calculator_discount_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_value_weight"
                    android:inputType="numberDecimal"
                    android:hint="@string/calculator_discount_hint"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/calculator_row_margin_top">

            <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                    style="@style/AppBaseTheme.TextView.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_title_weight"
                    android:text="@string/calculator_tip_title"
                    android:textColor="@color/text_medium"/>

            <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                    style="@style/AppBaseTheme.EditText"
                    android:id="@+id/calculator_tip_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_value_weight"
                    android:inputType="numberDecimal"
                    android:hint="@string/calculator_tip_hint"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/calculator_row_margin_top">

            <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_title_weight"
                    android:text=""/>

            <com.sevendesign.planitprom.ui.customviews.CustomFontButton
                    style="@style/AppBaseTheme.Button"
                    android:id="@+id/calculator_calculate_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_value_weight"
                    android:text="@string/calculator_calculate_title"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/calculator_row_margin_top">

            <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                    style="@style/AppBaseTheme.TextView.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_title_weight"
                    android:text="@string/calculator_total_title"
                    android:textColor="@color/text_medium"/>

            <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                    style="@style/AppBaseTheme.EditText"
                    android:id="@+id/calculator_total_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/row_value_weight"
                    android:inputType="numberDecimal" />
        </LinearLayout>



    </LinearLayout>
</ScrollView>

    <LinearLayout
            android:id="@+id/calculator_credit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            >

        <View
            android:layout_height="@dimen/separator_height"
            android:layout_width="match_parent"
            android:background="@color/separator_horizontal"
            />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/calculator_padding"
                >

        <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/calculator_credit_hint"
                android:textSize="@dimen/calculator_credit_hint_text"
                android:textColor="@color/text_medium"/>

        <com.sevendesign.planitprom.ui.customviews.CustomFontButton
                style="@style/AppBaseTheme.Button"
                android:id="@+id/calculator_credit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculator_credit_title"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>