<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_light1">

    <ScrollView
            android:id="@+id/category_add_scroll"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/category_add_take_picture_button"
            android:overScrollMode="never"
            >

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                >

            <LinearLayout
                    android:id="@+id/category_add_counter_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/category_add_total_budget_block_height"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/category_add_padding"
                    >

                <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/category_add_remain_budget_title"
                        android:textSize="@dimen/category_add_remain_budget_title"
                        android:textColor="@color/text_medium"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"/>

                <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                        android:id="@+id/category_add_remain_budget_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/category_add_remain_budget_value"
                        android:textColor="@color/text_medium"
                        />

            </LinearLayout>

            <View
                    android:layout_height="@dimen/separator_height"
                    android:layout_width="match_parent"
                    android:background="@color/separator_horizontal"
                    />

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/category_add_padding"
                    >

                    <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                            style="@style/AppBaseTheme.TextView.Title.InvertColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                    		android:layout_marginBottom="@dimen/settings_edit_title_margin_bottom"
                            android:text="@string/category_add_item_name_title"
                            />

                    <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                            style="@style/AppBaseTheme.EditText.InvertColor"
                            android:id="@+id/category_add_item_name_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/category_add_item_name_hint"
                            />


                    <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                            style="@style/AppBaseTheme.TextView.Title.InvertColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/settings_row_margin"
                    		android:layout_marginBottom="@dimen/settings_edit_title_margin_bottom"
                            android:text="@string/category_add_budgeted_title"
                            />

                    <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                            style="@style/AppBaseTheme.EditText"
                            android:id="@+id/category_add_budgeted_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/category_add_budgeted_hint"
                            android:inputType="numberDecimal"
                            />

                    <com.sevendesign.planitprom.ui.customviews.CustomFontTextView
                            style="@style/AppBaseTheme.TextView.Title.InvertColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/settings_row_margin"
                    		android:layout_marginBottom="@dimen/settings_edit_title_margin_bottom"
                            android:text="@string/category_add_actual_title"
                            />

                    <com.sevendesign.planitprom.ui.customviews.CustomFontEditText
                            style="@style/AppBaseTheme.EditText"
                            android:id="@+id/category_add_actual_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/category_add_actual_hint"
                            android:inputType="numberDecimal"
                            />


                <com.sevendesign.planitprom.ui.customviews.CustomFontButton
                        style="@style/AppBaseTheme.Button"
                        android:id="@+id/category_add_delete_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/category_add_delete_title" 
                        android:visibility="gone"/>



                </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <com.sevendesign.planitprom.ui.customviews.CustomFontButton
            style="@style/AppBaseTheme.Button"
            android:id="@+id/category_add_take_picture_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/category_add_take_picture_title"
            android:layout_alignParentBottom="true"
            />

</RelativeLayout>